Add a function to display content of button
Having trouble storing displayed value in a global scope, it seems a variable for that will only be possible inside for or forEach loop, but then I need to use it somewhere else.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,23 +8,22 @@
     <script src="index.js" defer></script>
     <title>My Calculator</title>
 </head>
+
 <body>
     <div class="frame">
-        <div class="display">
-            result
-        </div>
+        <div class="display"></div>
         <div class="buttons">
             <button>A/C</button>
-            <button>0</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
+            <button class="displayButton">0</button>
+            <button class="displayButton">1</button>
+            <button class="displayButton">2</button>
+            <button class="displayButton">3</button>
+            <button class="displayButton">4</button>
+            <button class="displayButton">5</button>
+            <button class="displayButton">6</button>
+            <button class="displayButton">7</button>
+            <button class="displayButton">8</button>
+            <button class="displayButton">9</button>
             <button>+</button>
             <button>-</button>
             <button>*</button>
@@ -32,4 +32,5 @@
         </div>
     </div>
 </body>
+
 </html>
