Add basic layout
Now it looks like a calculator

--- a/index.html
+++ b/index.html
@@ -4,30 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Audiowide&effect=3d" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
     <title>My Calculator</title>
 </head>
 
 <body>
+    <h1 class="font-effect-3d">My Calculator</h1>
     <div class="frame">
-        <div class="display"></div>
+        <div class="display">0</div>
         <div class="buttons">
-            <button>A/C</button>
-            <button class="displayButton">0</button>
-            <button class="displayButton">1</button>
-            <button class="displayButton">2</button>
-            <button class="displayButton">3</button>
-            <button class="displayButton">4</button>
-            <button class="displayButton">5</button>
-            <button class="displayButton">6</button>
             <button class="displayButton">7</button>
             <button class="displayButton">8</button>
             <button class="displayButton">9</button>
-            <button>+</button>
-            <button>-</button>
-            <button>*</button>
             <button>/</button>
+            <button class="displayButton">4</button>
+            <button class="displayButton">5</button>
+            <button class="displayButton">6</button>
+            <button>*</button>
+            <button class="displayButton">1</button>
+            <button class="displayButton">2</button>
+            <button class="displayButton">3</button>
+            <button>-</button>
+            <button class="displayButton">0</button>
+            <button style="font-size: 1.5rem; font-weight: 600;">A/C</button>
+            <button>+</button>
             <button>=</button>
         </div>
     </div>
