--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button class="displayButton">3</button>
             <button>-</button>
             <button class="displayButton">0</button>
-            <button style="font-size: 1.5rem; font-weight: 600;">A/C</button>
+            <button>A/C</button>
             <button>+</button>
             <button>=</button>
         </div>
