Change variable names to correct 'operator'

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
             <button class="displayButton">7</button>
             <button class="displayButton">8</button>
             <button class="displayButton">9</button>
-            <button class="operand">/</button>
+            <button class="operator">/</button>
             <button class="displayButton">4</button>
             <button class="displayButton">5</button>
             <button class="displayButton">6</button>
-            <button class="operand">*</button>
+            <button class="operator">*</button>
             <button class="displayButton">1</button>
             <button class="displayButton">2</button>
             <button class="displayButton">3</button>
-            <button class="operand">-</button>
+            <button class="operator">-</button>
             <button class="displayButton">0</button>
             <button>A/C</button>
-            <button class="operand">+</button>
+            <button class="operator">+</button>
             <button>=</button>
         </div>
     </div>
