Fix variable name from 'display..' to 'number'

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     <div class="frame">
         <div class="display">0</div>
         <div class="buttons">
-            <button class="displayButton">7</button>
-            <button class="displayButton">8</button>
-            <button class="displayButton">9</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
             <button class="operator">/</button>
-            <button class="displayButton">4</button>
-            <button class="displayButton">5</button>
-            <button class="displayButton">6</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
             <button class="operator">*</button>
-            <button class="displayButton">1</button>
-            <button class="displayButton">2</button>
-            <button class="displayButton">3</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
             <button class="operator">-</button>
-            <button class="displayButton">0</button>
+            <button class="number">0</button>
             <button>A/C</button>
             <button class="operator">+</button>
             <button>=</button>
