--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1 class="font-effect-3d">My Calculator</h1>
     <div class="frame">
-        <div class="display">0</div>
+        <div class="display"></div>
         <div class="buttons">
             <button class="number">7</button>
             <button class="number">8</button>
